# router-plus-portal

./: .gitignore  .travis.yml  .travis_configure_wrapper.sh  Makefile.am  NEWS  README.md  README.openwrt  router-plus-portal-msg.html.in  router-plus-portal.conf  router-plus-portal.spec.in  wifidog-msg.html.in  wifidog.conf
contrib/airos/wifidog/: files.patch  readme.txt
contrib/airos/wifidog/files/: wifidog.conf  wifidog.init
contrib/build-deb/: changelog  control  rules
contrib/build-openwrt-kamikazeipk/wifidog/files/: wifidog.conf  wifidog.init
contrib/build-openwrt-kamikazeipk8.09up/wifidog/files/: wifidog.init
contrib/build-openwrt-whiterussianipk/wifidog/: Config.in
contrib/build-openwrt-whiterussianipk/wifidog/files/: wifidog.conf  wifidog.init
contrib/build-openwrt-whiterussianipk/wifidog/ipkg/: wifidog.conffiles  wifidog.control
contrib/load-tester/: README.md  common.py  fire_requests.py  run.sh  wifidog-mock.conf
doc/: Makefile.am  README.developers.txt  doxygen.cfg.in
libhttpd/: api.c  httpd.h  version.c
scripts/init.d/: router-plus-portal  wifidog
src/: Makefile.am  centralserver.c  client_list.h  commandline.c  commandline.h  conf.c  conf.h  debug.c  firewall.c  fw_iptables.c  fw_iptables.h  gateway.c  http.c  http.h  httpd_thread.h  ping_thread.c  ping_thread.h  util.c  util.h  wd_util.c  wd_util.h  wdctl.c  wdctl.h  wdctl_thread.c  wdctl_thread.h
